--- a/src/ModifyUsers/User/style.css
+++ b/src/ModifyUsers/User/style.css
@@ -18,5 +18,4 @@
 }
 .user_container .buttons .norm {
   background-color: dodgerblue;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
