--- a/src/AdminPanel/style.scss
+++ b/src/AdminPanel/style.scss
@@ -6,6 +6,9 @@
     padding: 10px;
     box-shadow: 1px 1px 50px 5px rgba(0,0,0,0.28);
     border-radius: 8px;
+    height: auto;
+    width: fit-content;
+    background-color: white;
     .adminPanel_header{
         display: flex;
         justify-content: space-between;
