--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,31 @@
   font-family: 'Roboto', sans-serif;;
 }
 
+body{
+  padding-right: 0px !important;
+}
+
+.App{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.hide{
+  overflow: hidden;
+}
+
 .popUp_container{
   display: flex;
   justify-content: center;
-  position: absolute;
-  left: 0;
-  right: 0;
+  align-items: center;
+  position: fixed;
+  top: 0px;
+  left: 0px;
   z-index: 2;
-  background-color: white;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(211, 211, 211, 0.836);
+  backdrop-filter: blur(2px);
 }
