--- a/src/Footer/style.scss
+++ b/src/Footer/style.scss
@@ -3,8 +3,7 @@ footer{
     color: white;
     padding: .5rem;
     text-align: center;
-    position: absolute;
+    position: sticky;
     bottom: 0;
-    right: 0;
-    left: 0;
+    margin-top: auto;
 }
