--- a/src/Prefs/style.scss
+++ b/src/Prefs/style.scss
@@ -6,6 +6,7 @@
     padding: 10px;
     box-shadow: 1px 1px 50px 5px rgba(0,0,0,0.28);
     border-radius: 8px;
+    background-color: white;
     .pref_header{
         display: flex;
         justify-content: space-between;
