--- a/src/Stats/style.css
+++ b/src/Stats/style.css
@@ -1,6 +1,72 @@
 .stats_wrapper {
   margin: 0.5rem;
 }
-.stats_wrapper .room_selection_wrapper label {
+.stats_wrapper .stats_wrapper_header {
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 880px) {
+  .stats_wrapper .stats_wrapper_header {
+    flex-direction: column;
+  }
+}
+.stats_wrapper .stats_wrapper_header .stats_header_part_1 {
+  display: flex;
+}
+.stats_wrapper .stats_wrapper_header label {
   margin-right: 5px;
+}
+.stats_wrapper .stats_wrapper_header .mqtt_status_wrapper {
+  display: flex;
+  align-items: center;
+}
+.stats_wrapper .stats_wrapper_header .mqtt_status_wrapper label {
+  margin-left: 5px;
+}
+.stats_wrapper .stats_wrapper_header .mqtt_status_wrapper .mqtt_status {
+  width: 10px;
+  height: 10px;
+  background-color: red;
+  border-radius: 10px;
+}
+.stats_wrapper .stats_wrapper_header .mqtt_status_wrapper .active {
+  background-color: green;
+}
+.stats_wrapper .stats_wrapper_header button {
+  all: unset;
+  padding: 5px 10px;
+  background-color: dodgerblue;
+  margin-left: 10px;
+  color: white;
+  border-radius: 8px;
+}
+.stats_wrapper .stats_wrapper_header button:hover {
+  cursor: pointer;
+}
+@media screen and (max-width: 880px) {
+  .stats_wrapper .stats_wrapper_header button {
+    margin-top: 5px;
+  }
+}
+.stats_wrapper .stats_viewer_container {
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (max-width: 880px) {
+  .stats_wrapper .stats_viewer_container {
+    flex-direction: column;
+  }
+}
+.stats_wrapper .metrics {
+  width: 100%;
+}
+.stats_wrapper .metrics h3 {
+  margin-bottom: 10px;
+}
+.stats_wrapper .measurements {
+  width: 100%;
+  margin-right: 5px;
+}
+.stats_wrapper .measurements h3 {
+  margin-bottom: 10px;
 }/*# sourceMappingURL=style.css.map */
