--- a/src/Stats/style.scss
+++ b/src/Stats/style.scss
@@ -1,8 +1,66 @@
 .stats_wrapper{
     margin: .5rem;
-    .room_selection_wrapper{
+    .stats_wrapper_header{
+        display: flex;
+        align-items: center;
+        @media screen and (max-width: 880px) {
+            flex-direction: column;
+        }
+        .stats_header_part_1{
+            display: flex;
+        }
         label{
             margin-right: 5px;
+        }
+        .mqtt_status_wrapper{
+            display: flex;
+            align-items: center;
+            label{
+                margin-left: 5px;
+            }
+            .mqtt_status{
+                width: 10px;
+                height: 10px;
+                background-color: red;
+                border-radius: 10px;
+            }
+            .active{
+                background-color: green;
+            }
+        }
+        button{
+            all: unset;
+            padding: 5px 10px;
+            background-color: dodgerblue;
+            margin-left: 10px;
+            color: white;
+            border-radius: 8px;
+            &:hover{
+                cursor: pointer;
+            }
+            @media screen and (max-width: 880px) {
+                margin-top: 5px;
+            }
+        }
+    }
+    .stats_viewer_container{
+        display: flex;
+        justify-content: space-between;
+        @media screen and (max-width: 880px) {
+            flex-direction: column;
+        }
+    }
+    .metrics{
+        width: 100%;
+        h3{
+            margin-bottom: 10px;
+        }
+    }
+    .measurements{
+        width: 100%;
+        margin-right: 5px;
+        h3{
+            margin-bottom: 10px;
         }
     }
 }
